--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="assests/icon.svg" type="image/png" sizes="any">
   <script src="code.js"></script>
-  <title>קורס חובשים</title>
+  <title>תוצרים</title>
 
 
 </head>
