--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <header class="in-menu">
             <div class="menu-icon"></div>
             <!-- <img src="images/menu.svg" /> -->
-            <div class="topic">קורס חובשים</div>
+            <div class="topic">תוצרים</div>
             <div class="space"></div>
           </header>
         </div>
@@ -36,7 +36,7 @@
         <div class="title-wrapper">
           <header>
             <div class="menu-icon"></div>
-            <div class="topic">קורס חובשים</div>
+            <div class="topic">תוצרים</div>
             <div class="space"></div>
           </header>
         </div>
