--- a/index.html
+++ b/index.html
@@ -45,48 +45,48 @@
         <div id="anatomy-button">
           <div class="choice-button">
             <img class="home-buttons-img" src="assests/n2anatomy.svg">
-            <div id="card-buttom-home-name">אנטומיה</div>
-            <div class="buttom-home-explain">סרטון אחד, 5 לומדות</div>
+            <div id="card-buttom-home-name">בה"ד 6</div>
+            <div class="buttom-home-explain">0 לומדות</div>
           </div>
         </div>
 
         <div id="resucitation-button">
           <div class="choice-button">
-            <img class="home-buttons-img" src="assests/n3resucitation.svg">
-            <div id="card-buttom-home-name">החייאה</div>
-            <div class="buttom-home-explain">2 לומדות</div>
+            <img class="home-buttons-img" src="assests/bhd10logo.svg">
+            <div id="card-buttom-home-name">בה"ד 10</div>
+            <div class="buttom-home-explain">14 לומדות</div>
           </div>
         </div>
 
         <div id="medication-button">
           <div class="choice-button">
             <img class="home-buttons-img" src="assests/n4medication.svg">
-            <div id="card-buttom-home-name">רפואה</div>
-            <div class="buttom-home-explain">2 סרטונים, 3 לומדות</div>
+            <div id="card-buttom-home-name">בה"ד 11</div>
+            <div class="buttom-home-explain">לומדות 0</div>
           </div>
         </div>
 
         <div id="anamnesys-button">
           <div class="choice-button">
             <img class="home-buttons-img" src="assests/n5anamnesys.svg">
-            <div id="card-buttom-home-name"> אנמנזה</div>
-            <div class="buttom-home-explain">8 סרטונים</div>
+            <div id="card-buttom-home-name">בה"ד 13</div>
+            <div class="buttom-home-explain">לומדות 0</div>
           </div>
         </div>
 
         <div id="shigra-button">
           <div class="choice-button">
             <img class="home-buttons-img" src="assests/n6shigra.svg">
-            <div id="card-buttom-home-name">שגרה</div>
-            <div class="buttom-home-explain">לומדה אחת</div>
+            <div id="card-buttom-home-name">בה"ד 20</div>
+            <div class="buttom-home-explain">לומדות 0</div>
           </div>
         </div>
 
         <div id="trauma-button">
           <div class="choice-button">
             <img class="home-buttons-img" src="assests/n9trauma.svg">
-            <div id="card-buttom-home-name">טראומה </div>
-            <div class="buttom-home-explain">4 לומדות, 2 סרטונים</div>
+            <div id="card-buttom-home-name">לומדות גנריות</div>
+            <div class="buttom-home-explain">3 לומדות</div>
           </div>
         </div>
 
@@ -106,7 +106,7 @@
           עיצוב : <span class="name">טור' מייה ליבנה</span>
         </div>
         <div class="row">
-          גירסה: <span class="name">2020 1.0</span>
+          גירסה: <span class="name">2021 1.0</span>
         </div>
         <div id="logos">
           <img src="images/logos.svg">
@@ -126,37 +126,37 @@
         <div id="burgerAnatomy">
           <img src="assests/banatomy.svg">
           <div>
-            אנטומיה
+            בה"ד 6
           </div>
         </div>
         <div id="burgerResucitation">
           <img src="assests/bresucitation.svg">
           <div>
-            החייאה
+            בה"ד 10
           </div>
         </div>
         <div id="burgerMedication">
           <img src="assests/bmedication.svg">
           <div>
-            רפואה
+            בה"ד 11
           </div>
         </div>
         <div id="burgerAnamnesys">
           <img src="assests/banamnesys.svg">
           <div>
-            אנמנזה
+            בה"ד 13
           </div>
         </div>
         <div id="burgerShigra">
           <img src="assests/bshigra.svg">
           <div>
-            שגרה
+            בה"ד 20
           </div>
         </div>
         <div id="burgerTrauma">
           <img src="assests/btrauma.svg">
           <div>
-            טראומה
+            לומדות גנריות
           </div>
         </div>
         <div class="center">
@@ -169,7 +169,7 @@
       <div class="info inactive">
         <header class="up-strip-info">
           <div class="home-icon"></div>
-          <div class="topic">קורס חובשים</div>
+          <div class="topic">תוצרים</div>
           <div class="space"></div>
           <div class="play-icon"></div>
         </header>
