added_education_bhd

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="space"></div>
           </header>
         </div>
-        <img id="BHD-10-icon" src="assests/bhd10logo.svg">
+        <img id="BHD-10-icon" src="images/bhd_symbols/tilblack.svg">
         <div id="icon-text"><b>בחרו</b> אחד<br> מנושאי הלמידה</div>
         <img src="assests/arrow.svg" id="icon-arrow">
       </div>
@@ -44,7 +44,7 @@
         <!-- anatomy button -->
         <div id="anatomy-button">
           <div class="choice-button">
-            <img class="home-buttons-img" src="assests/n2anatomy.svg">
+            <img class="home-buttons-img" src="images/bhd_symbols/bhd_6.png">
             <div id="card-buttom-home-name">בה"ד 6</div>
             <div class="buttom-home-explain">0 לומדות</div>
           </div>
@@ -60,31 +60,39 @@
 
         <div id="medication-button">
           <div class="choice-button">
-            <img class="home-buttons-img" src="assests/n4medication.svg">
+            <img class="home-buttons-img" src="images/bhd_symbols/bhd_11.png">
             <div id="card-buttom-home-name">בה"ד 11</div>
-            <div class="buttom-home-explain">לומדות 0</div>
+            <div class="buttom-home-explain">0 לומדות</div>
           </div>
         </div>
 
         <div id="anamnesys-button">
           <div class="choice-button">
-            <img class="home-buttons-img" src="assests/n5anamnesys.svg">
+            <img class="home-buttons-img" src="images/bhd_symbols/bhd_13.png">
             <div id="card-buttom-home-name">בה"ד 13</div>
-            <div class="buttom-home-explain">לומדות 0</div>
+            <div class="buttom-home-explain">0 לומדות</div>
           </div>
         </div>
 
         <div id="shigra-button">
           <div class="choice-button">
-            <img class="home-buttons-img" src="assests/n6shigra.svg">
+            <img class="home-buttons-img" src="images/bhd_symbols/bhd_20.png">
             <div id="card-buttom-home-name">בה"ד 20</div>
-            <div class="buttom-home-explain">לומדות 0</div>
+            <div class="buttom-home-explain">0 לומדות</div>
+          </div>
+        </div>
+
+        <div id="education-button">
+          <div class="choice-button">
+            <img class="home-buttons-img" src="images/bhd_symbols/education_bhd.png">
+            <div id="card-buttom-home-name">בה"ד חינוך</div>
+            <div class="buttom-home-explain">0 לומדות</div>
           </div>
         </div>
 
         <div id="trauma-button">
           <div class="choice-button">
-            <img class="home-buttons-img" src="assests/n9trauma.svg">
+            <img class="home-buttons-img" src="images/bhd_symbols/tilblack.svg">
             <div id="card-buttom-home-name">לומדות גנריות</div>
             <div class="buttom-home-explain">3 לומדות</div>
           </div>
@@ -109,7 +117,7 @@
           גירסה: <span class="name">2021 1.0</span>
         </div>
         <div id="logos">
-          <img src="images/logos.svg">
+          <img src="images/bhd_symbols/tilblack.svg">
         </div>
       </div>
     </div>
@@ -153,6 +161,12 @@
             בה"ד 20
           </div>
         </div>
+        <div id="burgerEducation">
+          <img src="assests/bshigra.svg">
+          <div>
+            בה"ד חינוך
+          </div>
+        </div>
         <div id="burgerTrauma">
           <img src="assests/btrauma.svg">
           <div>
@@ -193,6 +207,10 @@
           </div>
 
           <div class="small-option-buttom shigra">
+
+          </div>
+
+          <div class="small-option-buttom education">
 
           </div>
 
