added images to menu

--- a/index.html
+++ b/index.html
@@ -132,43 +132,43 @@
           </div>
         </div>
         <div id="burgerAnatomy">
-          <img src="assests/banatomy.svg">
+          <img src="images/bhd_symbols/bhd_6.png">
           <div>
             בה"ד 6
           </div>
         </div>
         <div id="burgerResucitation">
-          <img src="assests/bresucitation.svg">
+          <img src="assests/bhd10logo.svg">
           <div>
             בה"ד 10
           </div>
         </div>
         <div id="burgerMedication">
-          <img src="assests/bmedication.svg">
+          <img src="images/bhd_symbols/bhd_11.png">
           <div>
             בה"ד 11
           </div>
         </div>
         <div id="burgerAnamnesys">
-          <img src="assests/banamnesys.svg">
+          <img src="images/bhd_symbols/bhd_13.png">
           <div>
             בה"ד 13
           </div>
         </div>
         <div id="burgerShigra">
-          <img src="assests/bshigra.svg">
+          <img src="images/bhd_symbols/bhd_20.png">
           <div>
             בה"ד 20
           </div>
         </div>
         <div id="burgerEducation">
-          <img src="assests/bshigra.svg">
+          <img src="images/bhd_symbols/education_bhd.png">
           <div>
             בה"ד חינוך
           </div>
         </div>
         <div id="burgerTrauma">
-          <img src="assests/btrauma.svg">
+          <img src="images/bhd_symbols/tilblack.svg">
           <div>
             לומדות גנריות
           </div>
