added apps and two new categories

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="choice-button">
             <img class="home-buttons-img" src="images/bhd_symbols/bhd_6.png">
             <div id="card-buttom-home-name">בה"ד 6</div>
-            <div class="buttom-home-explain">0 לומדות</div>
+            <div class="buttom-home-explain">0 לומדות ו-2 אפליקציות</div>
           </div>
         </div>
 
@@ -62,7 +62,7 @@
           <div class="choice-button">
             <img class="home-buttons-img" src="images/bhd_symbols/bhd_11.png">
             <div id="card-buttom-home-name">בה"ד 11</div>
-            <div class="buttom-home-explain">0 לומדות</div>
+            <div class="buttom-home-explain">0 לומדות ו-1 אפליקציות</div>
           </div>
         </div>
 
@@ -70,7 +70,7 @@
           <div class="choice-button">
             <img class="home-buttons-img" src="images/bhd_symbols/bhd_13.png">
             <div id="card-buttom-home-name">בה"ד 13</div>
-            <div class="buttom-home-explain">0 לומדות</div>
+            <div class="buttom-home-explain">0 לומדות ו-1 אפליקציות</div>
           </div>
         </div>
 
@@ -78,7 +78,7 @@
           <div class="choice-button">
             <img class="home-buttons-img" src="images/bhd_symbols/bhd_20.png">
             <div id="card-buttom-home-name">בה"ד 20</div>
-            <div class="buttom-home-explain">0 לומדות</div>
+            <div class="buttom-home-explain">0 לומדות ו-0 אפליקציות</div>
           </div>
         </div>
 
@@ -86,7 +86,23 @@
           <div class="choice-button">
             <img class="home-buttons-img" src="images/bhd_symbols/education_bhd.png">
             <div id="card-buttom-home-name">בה"ד חינוך</div>
-            <div class="buttom-home-explain">0 לומדות</div>
+            <div class="buttom-home-explain">0 לומדות ו-2 אפליקציות</div>
+          </div>
+        </div>
+
+        <div id="school-button">
+          <div class="choice-button">
+            <img class="home-buttons-img" src="images/bhd_symbols/school_bhd.png">
+            <div id="card-buttom-home-name">מפקדה</div>
+            <div class="buttom-home-explain">1 לומדות, 1 אתר ו-0 אפליקציות</div>
+          </div>
+        </div>
+
+        <div id="army-button">
+          <div class="choice-button">
+            <img class="home-buttons-img" src="images/bhd_symbols/army.png">
+            <div id="card-buttom-home-name">כלל צה"לי</div>
+            <div class="buttom-home-explain">0 לומדות ו-2 אפליקציות</div>
           </div>
         </div>
 
@@ -94,7 +110,7 @@
           <div class="choice-button">
             <img class="home-buttons-img" src="images/bhd_symbols/tilblack.svg">
             <div id="card-buttom-home-name">לומדות גנריות</div>
-            <div class="buttom-home-explain">3 לומדות</div>
+            <div class="buttom-home-explain">3 לומדות ו-2 אפליקציות</div>
           </div>
         </div>
 
@@ -167,14 +183,23 @@
             בה"ד חינוך
           </div>
         </div>
+        <div id="burgerSchool">
+          <img src="images/bhd_symbols/school_bhd.png">
+          <div>
+            מפקדה
+          </div>
+        </div>
+        <div id="burgerArmy">
+          <img src="images/bhd_symbols/army.png">
+          <div>
+            כלל צה"לי
+          </div>
+        </div>
         <div id="burgerTrauma">
           <img src="images/bhd_symbols/tilblack.svg">
           <div>
             לומדות גנריות
           </div>
-        </div>
-        <div class="center">
-          <img class="logos" src="assests/logos-dark.svg">
         </div>
       </div>
     </div>
@@ -211,6 +236,14 @@
           </div>
 
           <div class="small-option-buttom education">
+
+          </div>
+
+          <div class="small-option-buttom school">
+
+          </div>
+
+          <div class="small-option-buttom army">
 
           </div>
 
