--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="choice-button">
             <img class="home-buttons-img" src="images/bhd_symbols/bhd_6.png">
             <div id="card-buttom-home-name">בה"ד 6</div>
-            <div class="buttom-home-explain">0 לומדות ו-2 אפליקציות</div>
+            <div class="buttom-home-explain">1 לומדות ו-2 אפליקציות</div>
           </div>
         </div>
 
@@ -94,7 +94,7 @@
           <div class="choice-button">
             <img class="home-buttons-img" src="images/bhd_symbols/school_bhd.png">
             <div id="card-buttom-home-name">מפקדה</div>
-            <div class="buttom-home-explain">1 לומדות, 1 אתר ו-0 אפליקציות</div>
+            <div class="buttom-home-explain">3 לומדות, 1 אתר ו-0 אפליקציות</div>
           </div>
         </div>
 
@@ -110,7 +110,7 @@
           <div class="choice-button">
             <img class="home-buttons-img" src="images/bhd_symbols/tilblack.svg">
             <div id="card-buttom-home-name">לומדות גנריות</div>
-            <div class="buttom-home-explain">3 לומדות ו-2 אפליקציות</div>
+            <div class="buttom-home-explain">4 לומדות, 2 אפליקציות ואתר</div>
           </div>
         </div>
 
